src/objects/Consumption__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consumption</relationshipLabel>
        <relationshipName>Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_vs_Actual_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget vs Actual Line</label>
        <referenceTo>Budget_vs_Actual_Line__c</referenceTo>
        <relationshipLabel>Consumption</relationshipLabel>
        <relationshipName>Consumption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cocoa</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Spice</fullName>
                </value>
                <value>
                    <fullName>Edible_Nuts</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Certification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combination_Key__c</fullName>
        <formula>TEXT(Business_Unit__c) + &apos;_&apos; + TEXT(Year__c) + &apos;_&apos; + TEXT(Category__c) + &apos;_&apos; +  TEXT(Sub_Category__c) + &apos;_&apos; + TEXT(Sub_Category_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combination Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer&apos;s Coverage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defects__c</fullName>
        <label>Defects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Defects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>DATE(VALUE(TEXT(Year__c)) ,12,31)</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ingredient_commodity__c</fullName>
        <label>Ingredient/commodity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ingredient_commodity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Origin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <label>Pack Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pack_Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Type__c</fullName>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pack_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>Coverage__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <label>Processing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Processing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <label>Product Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Grade__c</fullName>
        <label>Product Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Grade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <label>Product Group Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Group_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <label>Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATE(VALUE(TEXT(Year__c)) ,1,1)</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strength</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Application_2__c</fullName>
        <label>Sub Application 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Application__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Application_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Application__c</fullName>
        <label>Sub Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_2__c</fullName>
        <label>Product Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>LBS</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                    <isActive>false</isActive>
                    <label>LB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Is_Account_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is by default unchecked, and will be updated by Flow when user tries to create a new Consumption record</description>
        <label>User Is Account Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Stream__c</fullName>
        <label>Value Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Value_Stream</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variety__c</fullName>
        <label>Variety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Variety</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_MT__c</fullName>
        <label>Annual Consumption Volume</label>
        <precision>11</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Consumption</label>
    <listViews>
        <fullName>All_Consumption</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Category_2__c</columns>
        <columns>Volume_MT__c</columns>
        <columns>Coverage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Consumption</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>RecordId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumption</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Access_Set__c</fullName>
        <label>Access Set</label>
    </sharingReasons>
    <validationRules>
        <fullName>Primary_Acnt_Owner_To_Create_Consumption</fullName>
        <active>false</active>
        <description>This validation rule will restrict only primary respective owner for the respective Account</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  NOT( ISBLANK( Account__c ) ) &amp;&amp;  
 (NOT( $Permission.Olam_Validation_Exception )&amp;&amp;( CASESAFEID($User.Id) &lt;&gt;  CASESAFEID( Account__r.Dairy_Owner_Id__c) &amp;&amp; TEXT( Business_Unit__c )= &apos;Dairy&apos;
) || ( CASESAFEID($User.Id) &lt;&gt;  CASESAFEID(  Account__r.Cocoa_Owner__c ) &amp;&amp; TEXT( Business_Unit__c )= &apos;Cocoa&apos;
))</errorConditionFormula>
        <errorMessage>Only Primary Account Owners can create Consumption</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Is_Not_Account_Team_Member</fullName>
        <active>true</active>
        <errorConditionFormula>isnew() &amp;&amp;  User_Is_Account_Team_Member__c = FALSE &amp;&amp; not($Permission.Olam_Validation_Exception)</errorConditionFormula>
        <errorMessage>You cannot create Consumption if you are not part of the Account Team. Add yourself as a Team Member in the Account before creating Consumption.</errorMessage>
    </validationRules>
</CustomObject>